Fixes more spacing issues on index

--- a/src/components/IndexContent/IndexContent.module.sass
+++ b/src/components/IndexContent/IndexContent.module.sass
@@ -1,5 +1,7 @@
 @import ../../styles/global
 
+.Index
+
 .Index__headerContainer
   height: 300px
   margin: -8px
@@ -7,13 +9,23 @@
   background-repeat: no-repeat !important
   background-size: cover !important
   background-position: center !important
+  display: flex
+  flex-direction: column
+  justify-content: center
 
   @media ($mobileBreak)
     height: 250px
 
 .Index__header
-  padding-left: 13%
-  padding-top: 75px
+  width: 80%
+  margin-left: auto
+  margin-right: auto
+
+  @media ($indexBreak)
+    width: 80%
+
+  @media ($mobileBreak)
+    width: 90%
 
 .Index__header__img
   max-height: 75px
@@ -41,7 +53,7 @@
   flex-direction: row
   justify-content: space-around
   align-itens: flex-start
-  width: 90%
+  width: 80%
 
   @media ($indexBreak)
     width: 100%
@@ -49,7 +61,7 @@
     align-items: center
 
 .Index__content
-  width: 76%
+  width: 80%
 
   @media ($mobileBreak)
     width: 90%
