--- a/src/components/Searchbar/Searchbar.module.sass
+++ b/src/components/Searchbar/Searchbar.module.sass
@@ -4,10 +4,9 @@
   border-bottom: 1px solid #828282
   display: flex
   flex-direction: row
-  justify-content: flex-start
+  justify-content: space-between
   margin-top: 0px
   margin-bottom: 48px
 
   @media ($indexBreak)
     margin-top: 24px
-    justify-content: space-between
